--- a/package.json
+++ b/package.json
@@ -10,7 +10,16 @@
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.6",
-    "vue": "^3.4.21"
+    "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
+    "json-server": "^1.0.0-beta.0",
+    "leaflet": "^1.9.4",
+    "primeflex": "^3.3.1",
+    "primevue": "^3.52.0",
+    "vue": "^3.4.27",
+    "vue-chartjs": "^5.3.1",
+    "vue-router": "^4.3.2",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
