--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.6",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "json-server": "^1.0.0-alpha.23",
