--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@googlemaps/js-api-loader": "^1.16.6",
     "axios": "^1.7.2",
     "chart.js": "^4.4.2",
+    "firebase-tools": "^13.11.0",
     "json-server": "^1.0.0-alpha.23",
     "leaflet": "^1.9.4",
     "primeflex": "^3.3.1",
